included Angular Localhost:4200
included Angular Localhost:4200

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET=MySuperSecretPassword
 GRAPHQLPORT=3000
-allowedOrigins=http://localhost:3000,http://elishconsutling.com,https://alivetracking.firebaseapp.com
+allowedOrigins=http://localhost:3000,http://localhost:4200,http://elishconsutling.com,https://alivetracking.firebaseapp.com
 mongoDBMLABURL=mongodb://xxxxxx:yyyyyy@ds020208.mlab.com:20208/elisherp
 mongoDBLocalURL=mongodb://127.0.0.1/elisherp
 DB_USERNAME=XXXXXXX
