--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,10 @@
 JWT_SECRET=MySuperSecretPassword
 GRAPHQLPORT=3000
 allowedOrigins=http://localhost:3000,http://localhost:4200,http://elishconsutling.com,https://alivetracking.firebaseapp.com
-mongoDBMLABURL=mongodb://xxxxxx:yyyyyy@ds020208.mlab.com:20208/elisherp
+mongoDBMLABURL=mongodb://username:password@ds020208.mlab.com:20208/elisherp
 mongoDBLocalURL=mongodb://127.0.0.1/elisherp
-DB_USERNAME=XXXXXXX
-DB_PASSWORD=YYYYYYY
-DB_NAME=ZZZZZZZZ
-DB_HOST=ZZZZZZZ.db.11536336.hostedresource.com
+DB_USERNAME=username
+DB_PASSWORD=password
+DB_NAME=ELISHGPS
+DB_HOST=db_host_string
 DB_DIALECT=mysql
